--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,5 +7,8 @@ services:
             target: dev-stage
         image: mb4-web-dev:1.0
         container_name: mb4-web-container-dev
+        volumes:
+            - .:/app
+            - /app/node_modules
         ports:
             - "3001:3000"
