--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "bootstrap-icons": "^1.8.1",
     "eslint": "^8.14.0",
     "pinia": "^2.0.13",
-    "prettier": "^2.6.2",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "prettier": "2.6.2",
     "vite": "^2.9.1"
   }
 }
