--- a/.prettierignore
+++ b/.prettierignore
@@ -1,16 +1,29 @@
-/data
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
+# data and dependancies
+data
+node_modules
 .DS_Store
 dist
 dist-ssr
 coverage
 *.local
 
+
+
 # env files
 *.env
 
 # Editor directories and files
 .vscode/*
+!.vscode/extensions.json
 .idea
 *.suo
 *.ntvs*
