--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "pretty": "prettier --write \"./**/*.{js,js,json,vue}\""
+    "pretty": "prettier --write \"./**/*.{js,js,json,ts,vue}\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.8.1",
     "eslint": "^8.14.0",
     "pinia": "^2.0.13",
+    "typescript": "^4.9.4",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
   },
