--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "jest": "^29.4.1",
     "prettier": "2.6.2",
     "vite": "^2.9.1"
   }
