--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "jest",
+    "test:one": "jest -t",
     "preview": "vite preview --port 5050",
     "pretty": "prettier --write \"./**/*.{js,js,json,ts,vue}\""
   },
@@ -23,6 +25,7 @@
     "@vitejs/plugin-vue": "^2.3.1",
     "jest": "^29.4.1",
     "prettier": "2.6.2",
+    "ts-jest": "^29.0.5",
     "vite": "^2.9.1"
   }
 }
