--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,7 @@
     "target": "es5",
     "allowJs": true,
     "moduleResolution": "node",
-    "esModuleInterop": true
-  },
-  "include": [
-    "src"
-  ],
+    "esModuleInterop": true,
+    "baseUrl": "src"
+  }
 }
