--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "test": "jest",
+    "test:one": "jest -t",
     "preview": "vite preview --port 5050",
     "pretty": "prettier --write \"./**/*.{js,js,json,ts,vue}\""
   },
@@ -16,12 +18,15 @@
     "eslint": "^8.14.0",
     "pinia": "^2.0.13",
     "typescript": "^4.9.4",
-    "vue": "^3.2.31",
+    "vue": "^3.2.47",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/vue3-jest": "^29.2.2",
+    "jest": "^29.4.1",
     "prettier": "2.6.2",
+    "ts-jest": "^29.0.5",
     "vite": "^2.9.1"
   }
 }
