--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # Only VITE_ variables will be exposed
 
 VITE_TITLE=Morphobank V4 (development mode)
-VITE_API_URL=http://localhost:8080
+VITE_API_URL=http://mb4-uat.morphobank.org/services
