Add matrix editor link.

--- a/development.env.template
+++ b/development.env.template
@@ -2,4 +2,5 @@
 # Only VITE_ variables will be exposed
 
 VITE_TITLE=Morphobank V4 (development mode)
-VITE_API_URL=http://localhost:8080
+VITE_API_URL=http://{domain}/services
+VITE_MATRIX_EDITOR_HOST=http://{domain}/editor
