--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/vue3-jest": "^29.2.2",
     "jest": "^29.4.1",
