--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@popperjs/core": "^2.11.5",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1",
+    "bootstrap-icons": "^1.10.5",
     "eslint": "^8.14.0",
     "pinia": "^2.0.13",
     "typescript": "^4.9.4",
     "vue": "^3.2.47",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue-tippy": "^6.1.2"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.0",
