--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "bootstrap-icons": "^1.10.5",
     "eslint": "^8.14.0",
     "pinia": "^2.0.13",
+    "tippy.js": "^6.3.7",
     "typescript": "^4.9.4",
     "vue": "^3.2.47",
     "vue-router": "^4.0.14",
-    "vue-tippy": "^6.1.2"
+    "vue-tippy": "^6.2.0"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.0",
