--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typescript": "^4.9.4",
     "vue": "^3.2.47",
     "vue-router": "^4.0.14",
-    "vue-tippy": "^6.2.0"
+    "vue-tippy": "^6.2.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.0",
