--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@popperjs/core": "^2.11.5",
+    "@types/bootstrap": "^5.2.7",
     "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.10.5",
     "eslint": "^8.14.0",
     "pinia": "^2.0.13",
