--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,12 @@
     "allowJs": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@assets/*": ["src/assets/*"]
+    },
     "lib": ["es2017", "dom", "esnext.asynciterable"]
   }
 }
