--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "d3": "^7.8.5",
     "eslint": "^8.14.0",
     "pinia": "^2.0.13",
+    "sass": "^1.69.5",
     "tippy.js": "^6.3.7",
     "typescript": "^4.9.4",
     "vue": "^3.2.47",
     "vue-router": "^4.0.14",
-    "vue-tippy": "^6.2.0",
-    "vuex": "^4.0.2"
+    "vue-tippy": "^6.2.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.1",
