--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "esnext",
     "target": "es5",
     "allowJs": true,
     "moduleResolution": "node",
@@ -13,6 +13,7 @@
       "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"]
     },
-    "lib": ["es2017", "dom", "esnext.asynciterable"]
+    "lib": ["es2017", "dom", "esnext.asynciterable"],
+    "types": ["vite/client"]
   }
 }
