--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,12 @@
       "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"]
     },
-    "lib": ["es2017", "dom", "esnext.asynciterable"],
+    "lib": [
+      "es2017",
+      "dom",
+      "dom.iterable",
+      "esnext.asynciterable"
+    ],
     "types": ["vite/client"]
   }
 }
