--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.14.0",
     "pinia": "^2.0.13",
     "sass": "^1.69.5",
+    "tiff.js": "^1.0.0",
     "tippy.js": "^6.3.7",
     "typescript": "^4.9.4",
     "vue": "^3.2.47",
