--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "@types/bootstrap": "^5.2.7",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-math": "^0.1.10",
+    "cornerstone-tools": "^6.0.10",
+    "cornerstone-wado-image-loader": "^4.13.2",
     "d3": "^7.8.5",
+    "dicom-parser": "^1.8.21",
     "eslint": "^8.14.0",
+    "hammerjs": "^2.0.8",
     "pinia": "^2.0.13",
     "sass": "^1.69.5",
     "tiff.js": "^1.0.0",
