MB4-225: Implement document section for published projects.

--- a/development.env.template
+++ b/development.env.template
@@ -2,4 +2,6 @@
 # Only VITE_ variables will be exposed
 
 VITE_TITLE=Morphobank V4 (development mode)
+VITE_HOST="http://{domain}"
 VITE_API_URL=http://{domain}/services
+VITE_MATRIX_EDITOR_HOST="http://{domain}/editor"
