--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pinia": "^2.2.5",
     "rollup": "^4.24.3",
     "sass": "^1.80.5",
+    "spam-detection": "^1.0.3",
     "tiff.js": "^1.0.0",
     "tippy.js": "^6.3.7",
     "typescript": "^4.9.5",
