--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dicom-parser": "^1.8.21",
     "eslint": "^8.57.1",
     "hammerjs": "^2.0.8",
+    "mb4-web": "file:",
     "pinia": "^2.2.5",
     "rollup": "^4.24.3",
     "sass": "^1.80.5",
