--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typescript": "^4.9.5",
     "vue": "^3.2.47",
     "vue-router": "^4.4.5",
-    "vue-tippy": "^6.5.0"
+    "vue-tippy": "^6.5.0",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
