publishing minor changes

--- a/development.env.template
+++ b/development.env.template
@@ -5,3 +5,4 @@ VITE_TITLE=Morphobank V4 (development mode)
 VITE_HOST="http://{domain}"
 VITE_API_URL=http://{domain}/services
 VITE_MATRIX_EDITOR_HOST="http://{domain}/editor"
+VITE_DOI_URL="https://{doi_domain}"
