--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tiff.js": "^1.0.0",
     "tippy.js": "^6.3.7",
     "typescript": "^4.9.5",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.2.47",
     "vue-router": "^4.4.5",
     "vue-tippy": "^6.5.0",
