--- a/development.env.template
+++ b/development.env.template
@@ -6,3 +6,5 @@ VITE_HOST="http://{domain}"
 VITE_API_URL=http://{domain}/services
 VITE_MATRIX_EDITOR_HOST="http://{domain}/editor"
 VITE_DOI_URL="https://{doi_domain}"
+VITE_IP_DETECTION_API=https://api.ipify.org?format=json
+VITE_MEMBERSHIP_API_BASE=https://pwapi-tair.arabidopsis.org
