--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "pretty": "prettier --write \"./**/*.{js,js,json,ts,vue}\""
   },
   "dependencies": {
+    "@babel/helpers": "^7.28.4",
+    "@babel/runtime": "^7.28.4",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@popperjs/core": "^2.11.8",
     "@types/bootstrap": "^5.2.10",
@@ -21,10 +23,14 @@
     "cornerstone-math": "^0.1.10",
     "cornerstone-tools": "^6.0.10",
     "cornerstone-wado-image-loader": "^4.13.2",
+    "cross-spawn": "^7.0.6",
     "d3": "^7.9.0",
     "dicom-parser": "^1.8.21",
+    "esbuild": "^0.25.10",
     "eslint": "^8.57.1",
+    "form-data": "^4.0.4",
     "hammerjs": "^2.0.8",
+    "nanoid": "^3.3.11",
     "pinia": "^2.2.5",
     "rollup": "^4.24.3",
     "sass": "^1.80.5",
@@ -46,6 +52,6 @@
     "jest": "^29.7.0",
     "prettier": "2.6.2",
     "ts-jest": "^29.2.5",
-    "vite": "^5.4.10"
+    "vite": "^5.4.20"
   }
 }
