csv converter, call curator api

--- a/development.env.template
+++ b/development.env.template
@@ -8,3 +8,4 @@ VITE_MATRIX_EDITOR_HOST="http://{domain}/editor"
 VITE_DOI_URL="https://{doi_domain}"
 VITE_IP_DETECTION_API=https://api.ipify.org?format=json
 VITE_MEMBERSHIP_API_BASE=https://pwapi-tair.arabidopsis.org
+VITE_CURATOR_API_URL=http://localhost:8001
