--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.57.1",
     "form-data": "^4.0.4",
     "hammerjs": "^2.0.8",
+    "jszip": "^3.10.1",
     "nanoid": "^3.3.11",
     "pinia": "^2.2.5",
     "rollup": "^4.24.3",
