Fix NEXUS parser cell doubling and add cell normalization
- NexusParser: use declared NCHAR dimension instead of characters.size
  in doMatrixCommand to prevent cell data from being misread as taxon names
  when CHARLABELS is absent (was creating 2x cell entries)
- CreateView: normalize cells Map to align with taxa keys before padding,
  handling underscore/space key mismatches and phantom entries
- CreateView: clear stale cell data when AI-extracting characters into a
  matrix that had no named characters (old cells don't match new chars)
- CreateView: add diagnostic logging for upload validation failures

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -9,6 +9,9 @@ services:
             target: dev-stage
         image: mb4-web-dev:1.0
         container_name: mb4-web-container-dev
+        environment:
+            - CHOKIDAR_USEPOLLING=true
+            - VITE_USE_POLLING=true
         volumes:
             - .:/app
             - /app/node_modules
